# sonic-platform-pdk-pde

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  NEWS  README.md  configure.ac  package.cfg
.github/: copilot-instructions.md
debian/: changelog  control  files  python-sonic-object-library.substvars  rules  sonic-cps-api.install  sonic-object-library-service.install  sonic-object-library.install  sonic-object-library.postinst  sonic-object-library.prerm  sonic-object-library.upstart  sonic-yang-utils-dev.install
debian.old/python-sonic-object-library/DEBIAN/: control  md5sums
debian.old/tmp/usr/lib/x86_64-linux-gnu/: libsonic_cps_api.la  libsonic_cps_class_map.la  libsonic_cps_class_map.so.0.0.0
debian/sonic-object-library-dev/DEBIAN/: control  md5sums
debian/sonic-object-library/DEBIAN/: control  md5sums
debian/tmp/usr/lib/python2.7/dist-packages/: cps.la
debian/tmp/usr/lib/x86_64-linux-gnu/: libsonic_cps_api.so.0.0.0  libsonic_cps_class_map.so.0
doc/: cps_gen_doc.sh  cps_py.awk
pde-test-host/: Makefile
pde-test-host/pde-test-host/: Makefile  parse_port_config.py  test_adapter_host.c
pde-test-host/pde-test-host/cunit/: Automated.c  Basic.c  Console.c  TestRun.c
pde-test-host/pde-test-host/debian/: changelog  control  copyright  files  install  rules
pde-test-host/pde-test-host/include/: Makefile  assert.h  brcm_avl.h  brcm_avl_api.h  brcm_sai_common.h  brcm_sai_extensions.h  brcm_sai_version.h  brcm_syncdb.h  brcm_syncdb_api.h  brcm_syncdb_msg.h  compiler.h  driver_util.h  types.h
pde-test-host/pde-test-host/include/pcap/: pcap.h
pde-test-host/pde-test-host/unittests/: saiSonicPde.c  saiUnitCommon.c  saiUnitTest.h  saiUnitUtil.c  saiUnitUtil.h
scripts/init/: sonic-environment  sonic-object-library.service
scripts/lib/: cps_object.py  cps_utils.py
scripts/lib/yang_tools/: ar_cms_yang.sh  ar_parse.sh  ar_parse_yang.sh
scripts/lib/yang_tools/py/: config_reader.py
sonic/: cps_api_errors.h  cps_api_node.h  cps_api_object.h  cps_api_object_tools.h  cps_api_operation.h  cps_api_service.h  cps_class_map.h
sonic-pde-tests/: setup.py
sonic-pde-tests/docs/: Makefile  README.rst
sonic-pde-tests/docs/source/: conf.py  index.rst  modules.rst  sonic_pde_tests.rst
sonic-pde-tests/sonic_pde_saiut/: .gitignore  Makefile  saiut.c  saiut.h  saiut.i
sonic-pde-tests/sonic_pde_tests/: conftest.py  sai-shell  test_bmc.py  test_config.py  test_cpld.py  test_eeprom.py  test_fan.py  test_leds.py  test_os.py  test_platform.py  test_port.py  test_psu.py  test_rtc.py  test_sai.py  test_sfp.py  test_thermal.py  test_usb.py  test_watchdog.py
sonic-pde-tests/sonic_pde_tests/data/platform/: platform-x86_64-accton_as7312_54x-r0-config.json  platform-x86_64-accton_as7326_56x-r0-config.json  platform-x86_64-accton_as7712_32x-r0-config.json  platform-x86_64-accton_as7726_32x-r0-config.json  platform-x86_64-accton_as7816_64x-r0-config.json  platform-x86_64-quanta_ix8_rglbmc-r0-config.json  platform-x86_64-quanta_ix9_bwde-r0-config.json  test-x86_64-accton_as7312_54x-r0-config.json  test-x86_64-accton_as7326_56x-r0-config.json  test-x86_64-accton_as7712_32x-r0-config.json  test-x86_64-accton_as7726_32x-r0-config.json  test-x86_64-accton_as7816_64x-r0-config.json  test-x86_64-quanta_ix8_rglbmc-r0-config.json  test-x86_64-quanta_ix9_bwde-r0-config.json
sonic-pde-tests/sonic_pde_tests/data/template/: platform-config.json  test-config.json
sonic/private/: cps_api_client_utils.h  cps_api_key_cache.h  cps_api_node_private.h  cps_api_object_internal.h  cps_api_vector_utils.h  cps_class_map_query.h  cps_comms_channel.h  cps_dictionary.h  cps_service_interface.h  cps_string_utils.h  dell-cps.h
sonic/private/db/: cps_api_db.h  cps_api_db_connection.h  cps_api_db_response.h  cps_api_node_set.h  cps_db.h  cps_redis_utils.h
sonic/private/event_service/: cps_zmq_comm_utils.h  cps_zmq_event_service.h  cps_zmq_utils.h
src/: Makefile  cps_api_events.cpp  cps_api_key.cpp  cps_api_node.cpp  cps_api_object.cpp  cps_api_object_tools.cpp  cps_api_operation_common.cpp  cps_api_operation_service.cpp  cps_api_service.cpp  cps_api_utils.cpp  cps_api_vector_utils.cpp  cps_ns.cpp  cps_string_utils.cpp
src/db/: cps_api_db_connection.cpp  cps_api_db_event_adapter.cpp  cps_api_db_node_set.cpp  cps_api_db_object_key.cpp  cps_api_db_operations.cpp  cps_api_db_response.cpp  cps_redis.cpp  cps_redis_utils.cpp
src/event_service/: cps_api_zmq_event_adapter.cpp  cps_buffered_ipc.cpp  cps_zmq_comm_utils.cpp  cps_zmq_event_service.cpp  cps_zmq_utils.cpp
src/metadata/: cps_api_metadata_import.cpp  cps_dictionary.cpp  cps_dictionary_loader.cpp
src/python_extension/: cps_api_python.cpp  cps_api_python.h  cps_api_python_operation.cpp  cps_example.py  op.py  reg.py  setup.py
src/std_event_service/: cps_api_base_event_adapter.cpp
src/unit_test/: cps_api_db_event_unittest.cpp  cps_api_db_timings.cpp  cps_api_db_unittest.cpp  cps_api_events_unittest.cpp  cps_api_object_unittest.cpp  cps_api_operation_unittest.cpp  cps_api_redis_unittest.cpp  cps_api_timings.cpp  cps_class_map_unittest.cpp  cps_class_ut_data.cpp  cps_class_ut_data.h  cps_registration_unittest.cpp
